--- a/templates/dadaportal/index.html
+++ b/templates/dadaportal/index.html
@@ -9,7 +9,7 @@
 {% block base %}
 <div class="search">
   <h1>Dada Portal</h1>
-  {% include 'dadaportal/simple-search.html' with placeholder='Search the dada. Or click below for everything.' %}
+  {% include 'dadaportal/simple-search.html' with placeholder='Search the dada. Or click below.' %}
   {% include 'dadaportal/navlinks.html' %}
 </div>
 {% endblock %}
