--- a/templates/dadaportal/navlinks.html
+++ b/templates/dadaportal/navlinks.html
@@ -1,7 +1,7 @@
 <ul>
   <li><a href="{% url 'dadaportal/recommended' %}">Recommended</a></li>
-  &bull; <li><a href="{% url 'mail/index' %}">All mail</a></li>
-  &bull; <li><a href="{% url 'articles/index' %}">All articles</a></li>
+  &bull; <li><a href="{% url 'mail/index' %}">Mail</a></li>
+  &bull; <li><a href="{% url 'articles/index' %}">Articles</a></li>
   {% comment %}
   &bull; <li><a href="/schedule/">Schedule</a></li>
   &bull; <li><a href="/!/about/">About</a></li>
