--- a/templates/dadaportal/recommended.html
+++ b/templates/dadaportal/recommended.html
@@ -1,20 +1,17 @@
 {% extends 'base.html' %}
 {% block base %}
 <article>
-  <h1>Popular articles/works</h1>
-  <h2>Software</h2>
-  <ul>
-    <li><a href="/!/sheetmusic/">sheetmusic</a>
-    <li><a href="https://github.com/scraperwiki/urchin">urchin</a>
-    <li><a href="http://openprism.thomaslevine.com">openprism</a>
-  </ul>
-  <h2>Data science</h2>
+  <h1>Recommended articles/works</h1>
+
+  <section class="column">
+  <h2>Popular</h2>
+  <h3>Data science</h3>
   <ul>
     <li><a href="/!/web-sites-to-data-tables-in-depth/">Web sites to data tables, in depth</a></li>
     <li><a href="/!/parsing-pdfs/">How I parse PDF files.</a></li>
     <li><a href="/!/r-spells-for-data-wizards/">R Spells for Data wizards</a></li>
   </ul>
-  <h2>Open openness</h2>
+  <h3>Open openness</h3>
   <ul>
     <li><a href="/!/open-data-licensing/">Open data licensing</a></li>
     <li><a href="/!/nyc-crime-map/">New York City crime map</a></li>
@@ -22,21 +19,37 @@
     <li><a href="/!/socrata-products/">Socrata products</a></li>
     <li><a href="/!/socrata-metrics-api/">Socrata metrics API</a></li>
   </ul>
-  <h2>Music videos</h2>
+  <h3>Music videos</h3>
   <ul>
     <li><a href="/!/christmas-gifts/">Christmas gifts</a></li>
     <li><a href="http://fms.csvsoundsystem.com">USA spending</a></li>
-    <li><a href="/!/twinkle/">Twinkle</a></li>
   </ul>
-  <h2>Toilets</h2>
+  <h3>Toilets</h3>
   <ul>
     <li><a href="/!/risley-toilets/">Unsanitary conditions in the Risley Hall bathrooms</a></li>
     <li><a href="/!/hovering-cycle/">Posture</a></li>
   </ul>
-  <h2>Other</h2>
+  <h3>Other</h3>
   <ul>
     <li><a href="/!/print-formaldehyde/">Artisan spreadsheets</a>
     <li><a href="/!/beaglebone-power/">Beaglebone power supplies</a></li>
   </ul>
+  </section>
+
+  <section class="column">
+    <h2>Tom's picks</h2>
+
+    <h3>Software</h3>
+    <ul>
+      <li><a href="/!/sheetmusic/">sheetmusic</a>
+      <li><a href="https://github.com/scraperwiki/urchin">urchin</a>
+      <li><a href="http://openprism.thomaslevine.com">openprism</a>
+    </ul>
+
+  <h3>Art</h3>
+    <ul>
+      <li><a href="/!/twinkle/">Twinkle</a></li>
+    </ul>
+  </section>
 </article>
 {% endblock %}
