--- a/templates/dadaportal/recommended.html
+++ b/templates/dadaportal/recommended.html
@@ -10,6 +10,13 @@
     <li><a href="/!/web-sites-to-data-tables-in-depth/">Web sites to data tables, in depth</a></li>
     <li><a href="/!/parsing-pdfs/">How I parse PDF files.</a></li>
     <li><a href="/!/r-spells-for-data-wizards/">R Spells for Data wizards</a></li>
+    <li><a href="/!/geom_doner/">geom_doner</a></li>
+    <li><a href="/!/print-formaldehyde/">Artisan spreadsheets</a>
+  </ul>
+  <h3>Music videos</h3>
+  <ul>
+    <li><a href="/!/christmas-gifts/">Christmas gifts</a></li>
+    <li><a href="http://fms.csvsoundsystem.com">USA spending</a></li>
   </ul>
   <h3>Open openness</h3>
   <ul>
@@ -19,37 +26,56 @@
     <li><a href="/!/socrata-products/">Socrata products</a></li>
     <li><a href="/!/socrata-metrics-api/">Socrata metrics API</a></li>
   </ul>
-  <h3>Music videos</h3>
-  <ul>
-    <li><a href="/!/christmas-gifts/">Christmas gifts</a></li>
-    <li><a href="http://fms.csvsoundsystem.com">USA spending</a></li>
-  </ul>
   <h3>Toilets</h3>
   <ul>
-    <li><a href="/!/risley-toilets/">Unsanitary conditions in the Risley Hall bathrooms</a></li>
+    <li><a href="/!/risley-toilets/">On unsanitary conditions</a></li>
     <li><a href="/!/hovering-cycle/">Posture</a></li>
+    {% comment %}
+    <li><a href="https://lists.sudoroom.org/pipermail/sudo-discuss/2015-January/008780.html">In hackerspaces</a></li>
+    {% endcomment %}
   </ul>
   <h3>Other</h3>
   <ul>
-    <li><a href="/!/print-formaldehyde/">Artisan spreadsheets</a>
     <li><a href="/!/beaglebone-power/">Beaglebone power supplies</a></li>
+    <li><a href="/!/jello-wrestling/">Nude jello wrestling</a></li>
   </ul>
   </section>
 
   <section class="column">
     <h2>Tom's picks</h2>
 
+    <h3>Learning to computer</h3>
+    <ul>
+      <li><a href="/!/street-sign-protocol/">Protocols</a></li>
+      <li><a href="/!/table-words/">Data tables</a></li>
+      <li><a href="/!/variables/">Two meanings of "variable"</a></li>
+      <li><a href="/!/templating-languages/">Templating languages</a></li>
+      <li><a href="/!/downloading-binary-files-is-not-magic/">Binary files</a></li>
+    </ul>
+
     <h3>Software</h3>
     <ul>
       <li><a href="/!/sheetmusic/">sheetmusic</a>
-      <li><a href="https://github.com/scraperwiki/urchin">urchin</a>
+      <li><a href="https://github.com/tlevine/urchin">urchin</a>
       <li><a href="http://openprism.thomaslevine.com">openprism</a>
+      <li><a href="/!/treasury.io/">treasury.io</a>
     </ul>
 
-  <h3>Art</h3>
+    <h3>Art</h3>
     <ul>
       <li><a href="/!/twinkle/">Twinkle</a></li>
+      <li><a href="/!/gullible/">Gullible</a></li>
+      <li><a href="/!/pie-π/">Pie π</a></li>
+      <li><a href="/!/pbdq/">Mind your p's and q's.</a></li>
+      <li><a href="/!/decompilers-in-css/">CSS</a></li>
     </ul>
+
+    <h3>Other</h3>
+    <ul>
+      <li><a href="/!/brainstorming/">Brainstorming</a></li>
+      <li><a href="/!/computer-bootcamps/">Choosing a computer bootcamp</a></li>
+    </ul>
+
   </section>
 </article>
 {% endblock %}
