--- a/templates/dadaportal/recommended.html
+++ b/templates/dadaportal/recommended.html
@@ -1,44 +1,43 @@
 {% extends 'base.html' %}
 {% block base %}
 <article>
-  <h1>Recommended articles/works</h1>
+  <h1>Recommended readings/works</h1>
 
   <section class="column">
-  <h2>Popular</h2>
-  <h3>Data science</h3>
-  <ul>
-    <li><a href="/!/web-sites-to-data-tables-in-depth/">Web sites to data tables, in depth</a></li>
-    <li><a href="/!/parsing-pdfs/">How I parse PDF files.</a></li>
-    <li><a href="/!/r-spells-for-data-wizards/">R Spells for Data wizards</a></li>
-    <li><a href="/!/geom_doner/">geom_doner</a></li>
-    <li><a href="/!/print-formaldehyde/">Artisan spreadsheets</a>
-  </ul>
-  <h3>Music videos</h3>
-  <ul>
-    <li><a href="/!/christmas-gifts/">Christmas gifts</a></li>
-    <li><a href="http://fms.csvsoundsystem.com">USA spending</a></li>
-  </ul>
-  <h3>Open openness</h3>
-  <ul>
-    <li><a href="/!/open-data-licensing/">Open data licensing</a></li>
-    <li><a href="/!/nyc-crime-map/">New York City crime map</a></li>
-    <li><a href="/!/socrata-summary/">Socrata summary</a></li>
-    <li><a href="/!/socrata-products/">Socrata products</a></li>
-    <li><a href="/!/socrata-metrics-api/">Socrata metrics API</a></li>
-  </ul>
-  <h3>Toilets</h3>
-  <ul>
-    <li><a href="/!/risley-toilets/">On unsanitary conditions</a></li>
-    <li><a href="/!/hovering-cycle/">Posture</a></li>
-    {% comment %}
-    <li><a href="https://lists.sudoroom.org/pipermail/sudo-discuss/2015-January/008780.html">In hackerspaces</a></li>
-    {% endcomment %}
-  </ul>
-  <h3>Other</h3>
-  <ul>
-    <li><a href="/!/beaglebone-power/">Beaglebone power supplies</a></li>
-    <li><a href="/!/jello-wrestling/">Nude jello wrestling</a></li>
-  </ul>
+    <h2>Popular</h2>
+    <h3>Data science</h3>
+    <ul>
+      <li><a href="/!/web-sites-to-data-tables-in-depth/">Web sites to data tables, in depth</a></li>
+      <li><a href="/!/parsing-pdfs/">How I parse PDF files.</a></li>
+      <li><a href="/!/r-spells-for-data-wizards/">R Spells for Data wizards</a></li>
+      <li><a href="/!/print-formaldehyde/">Artisan spreadsheets</a>
+    </ul>
+    <h3>Music videos</h3>
+    <ul>
+      <li><a href="/!/christmas-gifts/">Christmas gifts</a></li>
+      <li><a href="http://fms.csvsoundsystem.com">USA spending</a></li>
+    </ul>
+    <h3>Open openness</h3>
+    <ul>
+      <li><a href="/!/open-data-licensing/">Open data licensing</a></li>
+      <li><a href="/!/nyc-crime-map/">New York City crime map</a></li>
+      <li><a href="/!/socrata-summary/">Socrata summary</a></li>
+      <li><a href="/!/socrata-products/">Socrata products</a></li>
+      <li><a href="/!/socrata-metrics-api/">Socrata metrics API</a></li>
+    </ul>
+    <h3>Toilets</h3>
+    <ul>
+      <li><a href="/!/risley-toilets/">On unsanitary conditions</a></li>
+      <li><a href="/!/hovering-cycle/">Posture</a></li>
+      {% comment %}
+      <li><a href="https://lists.sudoroom.org/pipermail/sudo-discuss/2015-January/008780.html">In hackerspaces</a></li>
+      {% endcomment %}
+    </ul>
+    <h3>Other</h3>
+    <ul>
+      <li><a href="/!/beaglebone-power/">Beaglebone power supplies</a></li>
+      <li><a href="/!/jello-wrestling/">Nude jello wrestling</a></li>
+    </ul>
   </section>
 
   <section class="column">
@@ -57,6 +56,7 @@
     <ul>
       <li><a href="/!/sheetmusic/">sheetmusic</a>
       <li><a href="https://github.com/tlevine/urchin">urchin</a>
+      <li><a href="/!/geom_doner/">geom_doner</a></li>
       <li><a href="http://openprism.thomaslevine.com">openprism</a>
       <li><a href="/!/treasury.io/">treasury.io</a>
     </ul>
