--- a/templates/dadaportal/recommended.html
+++ b/templates/dadaportal/recommended.html
@@ -50,6 +50,7 @@
       <li><a href="/!/variables/">Two meanings of "variable"</a></li>
       <li><a href="/!/templating-languages/">Templating languages</a></li>
       <li><a href="/!/downloading-binary-files-is-not-magic/">Binary files</a></li>
+      <li><a href="/!/r-for-people-who-already-know-something-about-programming/">R for people who already know something about programming</a></li>
     </ul>
 
     <h3>Software</h3>
