--- a/templates/base.html
+++ b/templates/base.html
@@ -60,7 +60,9 @@
       {% include 'dadaportal/simple-search.html' %}
       {% endblock %}
     </nav>
-    {% block base %}{% endblock %}
+    <main role="main">
+      {% block base %}{% endblock %}
+    </main>
     {% if hit_id %}
     <script>{% include 'tracking/followup.js' %}</script>
     <noscript><img style="border: 0;" src="{% url 'tracking/followup-img' %}?hit_id={{hit_id}}" /></noscript>
