--- a/templates/search/search.html
+++ b/templates/search/search.html
@@ -3,13 +3,12 @@
 {% block base %}
   <h1>Search the Dada Portal</h1>
 
-  <section>
-    <h2>Query</h2>
-    <form method="get" action=".">
-      {{ form.as_p }}
-      <p><input type="submit" value="Search"></p>
-    </form>
-  </section>
+  <form method="get" action="." class="haystack-search">
+    <ul>
+      {{ form.as_ul }}
+    </ul>
+    <input type="submit" value="Search">
+  </form>
 
   {% if query %}
   <section>
