--- a/templates/search/search.html
+++ b/templates/search/search.html
@@ -16,7 +16,7 @@
 
     <dl>
       {% for result in page.object_list %}
-      <dt><a href="{{ result.object.get_absolute_url }}">{{ result.title }}</a></dt>
+      <dt><a href="{{ result.url }}">{{ result.title }}</a></dt>
       <dd>{{ result.description }}</dd>
       {% empty %}
       <p>No results found.</p>
