--- a/static/style.css
+++ b/static/style.css
@@ -281,14 +281,11 @@ article {
   text-align: justify;
 }
 article dl {
+  margin: 0;
   border-left: none;
   border-right: none;
   border-top: solid 2px;
   border-bottom: solid 2px;
-}
-article dl dt:nth-child(n + 2),
-article dl dd:nth-child(n + 2) {
-  border-top: solid 1px;
 }
 /* article dt:after { content: ': '; } */
 article dt { float: left; width: 170px; }
