--- a/static/style.css
+++ b/static/style.css
@@ -252,28 +252,36 @@ article section.column:nth-child(odd) {
 }
 
 /* Haystack search page */
-.haystack-search {
+.haystack-search form {
   width: 340px;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
 }
-.haystack-search input[type=search] {
+.haystack-search form input[type=search] {
   display: block;
   width: 99%;
   height: 42px;
 }
-.haystack-search input[type=submit] {
+.haystack-search form input[type=submit] {
   height: 42px;
   width: 126px;
 }
-.haystack-search > ul {
+.haystack-search form > ul {
   text-align: center;
   margin: 0;
   padding: 0;
 }
-.haystack-search > ul li {
+.haystack-search form > ul li {
   display: inline-block;
+}
+.haystack-search .highlighted {
+  border: dashed 1px #fe57a1;
+  background-color: #333;
+  padding-top: 2px;
+  padding-bottom: 0px;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
 /* Article styles */
