--- a/templates/search/search.html
+++ b/templates/search/search.html
@@ -35,7 +35,7 @@
       </a>
       {% endif %}
 
-      |
+      &bull;
 
       {% if page.has_next %}
       <a href="?q={{ query }}&amp;page={{ page.next_page_number }}">
