--- a/templates/dadaportal/recommended.html
+++ b/templates/dadaportal/recommended.html
@@ -1,23 +1,23 @@
 {% extends 'base.html' %}
 {% block base %}
 <article>
-  <h1>Recommended readings/works</h1>
+  <h1>Recommended readings and whatnot</h1>
 
   <section class="column">
     <h2>Popular</h2>
-    <h3>Data science</h3>
+    <p>Data science</p>
     <ul>
       <li><a href="/!/web-sites-to-data-tables-in-depth/">Web sites to data tables, in depth</a></li>
       <li><a href="/!/parsing-pdfs/">How I parse PDF files.</a></li>
       <li><a href="/!/r-spells-for-data-wizards/">R Spells for Data wizards</a></li>
       <li><a href="/!/print-formaldehyde/">Artisan spreadsheets</a>
     </ul>
-    <h3>Music videos</h3>
+    <p>Music videos</p>
     <ul>
       <li><a href="/!/christmas-gifts/">Christmas gifts</a></li>
       <li><a href="http://fms.csvsoundsystem.com">USA spending</a></li>
     </ul>
-    <h3>Open openness</h3>
+    <p>Open openness</p>
     <ul>
       <li><a href="/!/open-data-licensing/">Open data licensing</a></li>
       <li><a href="/!/nyc-crime-map/">New York City crime map</a></li>
@@ -25,7 +25,7 @@
       <li><a href="/!/socrata-products/">Socrata products</a></li>
       <li><a href="/!/socrata-metrics-api/">Socrata metrics API</a></li>
     </ul>
-    <h3>Toilets</h3>
+    <p>Toilets</p>
     <ul>
       <li><a href="/!/risley-toilets/">On unsanitary conditions</a></li>
       <li><a href="/!/hovering-cycle/">Posture</a></li>
@@ -33,7 +33,7 @@
       <li><a href="https://lists.sudoroom.org/pipermail/sudo-discuss/2015-January/008780.html">In hackerspaces</a></li>
       {% endcomment %}
     </ul>
-    <h3>Other</h3>
+    <p>Other</p>
     <ul>
       <li><a href="/!/beaglebone-power/">Beaglebone power supplies</a></li>
       <li><a href="/!/jello-wrestling/">Nude jello wrestling</a></li>
@@ -43,7 +43,7 @@
   <section class="column">
     <h2>Tom's picks</h2>
 
-    <h3>Learning to computer</h3>
+    <p>Learning to computer</p>
     <ul>
       <li><a href="/!/street-sign-protocol/">Protocols</a></li>
       <li><a href="/!/table-words/">Data tables</a></li>
@@ -53,7 +53,7 @@
       <li><a href="/!/r-for-people-who-already-know-something-about-programming/">R for people who already know something about programming</a></li>
     </ul>
 
-    <h3>Software</h3>
+    <p>Software</p>
     <ul>
       <li><a href="/!/sheetmusic/">sheetmusic</a>
       <li><a href="https://github.com/tlevine/urchin">urchin</a>
@@ -62,7 +62,7 @@
       <li><a href="/!/treasury.io/">treasury.io</a>
     </ul>
 
-    <h3>Art</h3>
+    <p>Art</p>
     <ul>
       <li><a href="/!/twinkle/">Twinkle</a></li>
       <li><a href="/!/gullible/">Gullible</a></li>
@@ -71,7 +71,7 @@
       <li><a href="/!/decompilers-in-css/">CSS</a></li>
     </ul>
 
-    <h3>Other</h3>
+    <p>Other</p>
     <ul>
       <li><a href="/!/brainstorming/">Brainstorming</a></li>
       <li><a href="/!/computer-bootcamps/">Choosing a computer bootcamp</a></li>
