--- a/static/style.css
+++ b/static/style.css
@@ -69,49 +69,49 @@
 
 @font-face {
 	font-family: 'Ostrich Sans';
-	src: url('ostrich-sans-black.woff') format('woff');
+	src: url(/static/fonts/ostrich-sans/ostrich-sans-black.woff) format('woff');
 	font-weight: 900;
 	font-style: normal;
 }
 @font-face {
 	font-family: 'Ostrich Sans';
-	src: url('ostrich-sans-bold.woff') format('woff');
+	src: url(/static/fonts/ostrich-sans/ostrich-sans-bold.woff) format('woff');
 	font-weight: 700;
 	font-style: normal;
 }
 @font-face {
 	font-family: 'Ostrich Sans';
-	src: url('ostrich-sans-regular.woff') format('woff');
+	src: url(/static/fonts/ostrich-sans/ostrich-sans-regular.woff) format('woff');
 	font-weight: 400;
 	font-style: normal;
 }
 @font-face {
 	font-family: 'Ostrich Sans';
-	src: url('ostrich-sans-light.woff') format('woff');
+	src: url(/static/fonts/ostrich-sans/ostrich-sans-light.woff) format('woff');
 	font-weight: 300;
 	font-style: normal;
 }
 @font-face {
 	font-family: 'Ostrich Sans Dashed';
-	src: url('ostrich-sans-dashed.woff') format('woff');
+	src: url(/static/fonts/ostrich-sans/ostrich-sans-dashed.woff) format('woff');
 	font-weight: 500;
 	font-style: normal;
 }
 @font-face {
 	font-family: 'Ostrich Sans Rounded';
-	src: url('ostrich-sans-rounded.woff') format('woff');
+	src: url(/static/fonts/ostrich-sans/ostrich-sans-rounded.woff) format('woff');
 	font-weight: 500;
 	font-style: normal;
 }
 @font-face {
 	font-family: 'Ostrich Sans Inline';
-	src: url('ostrich-sans-inline-regular.woff') format('woff');
+	src: url(/static/fonts/ostrich-sans/ostrich-sans-inline-regular.woff) format('woff');
 	font-weight: normal;
 	font-style: normal;
 }
 @font-face {
 	font-family: 'Ostrich Sans Inline';
-	src: url('ostrich-sans-inline-italic.woff') format('woff');
+	src: url(/static/fonts/ostrich-sans/ostrich-sans-inline-italic.woff) format('woff');
 	font-weight: normal;
 	font-style: italic;
 }
@@ -129,7 +129,7 @@
 
 /* Base formatting */
 body {
-  font: 400 18px 'Linden Hill', serif;
+  font: 400 18px 'Sorts Mill Goudy', 'Linden Hill', serif;
   line-height: 125%;
   width: 100%;
   height: 100%;
@@ -206,7 +206,7 @@ nav li {
 nav ul, nav .search-form { text-align: center; }
 nav li { margin: 0; }
 nav {
-  height: 53px;
+  height: 42px;
 }
 
 /* Footer */
@@ -218,8 +218,8 @@ footer {
 
 /* Root page */
 #index-main .search ul {
+  margin-left: 0;
   text-align: center;
-
 }
 #index-main .search li {
   display: inline;
@@ -423,6 +423,7 @@ article ul, article ol, article dl {
   }
   .search-form input {
     height: 42px;
+    /* The input[type=search] elements are 2 px bigger, and I don't understand why. */
   }
 
   #index-main .search {
@@ -433,19 +434,19 @@ article ul, article ol, article dl {
     width: 520px;
   }
   .search-form, #index-main .search {
-    width: 250px;
+    width: 200px;
   }
   .search-form input[type=search] {
-    width: 162px; /* should be 174, but I left room for the fudge factor */
+    width: 112px; /* should be 124, but I left room for the fudge factor */
   }
 }
 @media screen and (min-width: 630px) {
   main { width: 610px; }
   .search-form, #index-main .search {
-    width: 350px;
+    width: 300px;
   }
   .search-form input[type=search] {
-    width: 242px; /* should be 254, but I left room for the fudge factor */
+    width: 192px; /* should be 204, but I left room for the fudge factor */
   }
 }
 @media screen and (min-width: 720px) {
