--- a/templates/dadaportal/recommended.html
+++ b/templates/dadaportal/recommended.html
@@ -9,13 +9,17 @@
     <ul>
       <li><a href="/!/web-sites-to-data-tables-in-depth/">Web sites to data tables, in depth</a></li>
       <li><a href="/!/parsing-pdfs/">How I parse PDF files.</a></li>
+      <li><a href="/!/table-words/">Data tables</a></li>
+      <li><a href="/!/variables/">Two meanings of "variable"</a></li>
       <li><a href="/!/r-spells-for-data-wizards/">R Spells for Data wizards</a></li>
       <li><a href="/!/print-formaldehyde/">Artisan spreadsheets</a>
     </ul>
-    <p>Music videos</p>
+    <p>Music</p>
     <ul>
+      <li><a href="/!/sheetmusic/">sheetmusic</a>
+      <li><a href="/!/twinkle/">Twinkle</a></li>
       <li><a href="/!/christmas-gifts/">Christmas gifts</a></li>
-      <li><a href="http://fms.csvsoundsystem.com">USA spending</a></li>
+      <li><a href="/!/fms-symphony/">USA spending</a></li>
     </ul>
     <p>Open openness</p>
     <ul>
@@ -46,8 +50,6 @@
     <p>Learning to computer</p>
     <ul>
       <li><a href="/!/street-sign-protocol/">Protocols</a></li>
-      <li><a href="/!/table-words/">Data tables</a></li>
-      <li><a href="/!/variables/">Two meanings of "variable"</a></li>
       <li><a href="/!/templating-languages/">Templating languages</a></li>
       <li><a href="/!/downloading-binary-files-is-not-magic/">Binary files</a></li>
       <li><a href="/!/r-for-people-who-already-know-something-about-programming/">R for people who already know something about programming</a></li>
@@ -55,7 +57,6 @@
 
     <p>Software</p>
     <ul>
-      <li><a href="/!/sheetmusic/">sheetmusic</a>
       <li><a href="https://github.com/tlevine/urchin">urchin</a>
       <li><a href="/!/geom_doner/">geom_doner</a></li>
       <li><a href="http://openprism.thomaslevine.com">openprism</a>
@@ -64,7 +65,6 @@
 
     <p>Art</p>
     <ul>
-      <li><a href="/!/twinkle/">Twinkle</a></li>
       <li><a href="/!/gullible/">Gullible</a></li>
       <li><a href="/!/pie-π/">Pie π</a></li>
       <li><a href="/!/pbdq/">Mind your p's and q's.</a></li>
