--- a/articles/static/big/big.css
+++ b/articles/static/big/big.css
@@ -1,18 +1,19 @@
 body {
-  font-family: 'Helvetica';
-  letter-spacing:-5px;
+  font-family: 'sans-serif';
   background:#000;
   background-size:100%;
   color:#fff;
   margin:0;
   padding:0;
-  font-weight:bold;
 }
 
-h1, h2, h3, p {
+h1, h2, h3, h4, h5, h6 {
   font: inherit;
+  letter-spacing: -5px;
+  font-weight: bold;
   display: inline;
 }
+p { display: none; }
 
 em, a {
   font-style:normal;
