--- a/templates/articles/article.html
+++ b/templates/articles/article.html
@@ -8,5 +8,6 @@
     Last modified <time datetime="{{ modified|date:'c' }}">{{ modified }}</time>
     &bull; <a href="/source/{{ endpoint }}/{{ filename }}">View source</a>
     {% if other_source %}&bull; <a href="{{ other_source }}">Other source</a>{% endif %}
+    &bull; <a href="?slides">Slides</a>
 </footer>
 {% endblock %}
