--- a/templates/articles/big.html
+++ b/templates/articles/big.html
@@ -3,8 +3,8 @@
 <html>
 <head>
   {% include 'meta.html' %}
-  <link href="{% static 'big/big.css' %}" rel="stylesheet" type="text/css" />
-  <script src="{% static 'big/big.js' %}"></script>
+  <link href="{% static 'big.css' %}" rel="stylesheet" type="text/css" />
+  <script src="{% static 'articles/big.js' %}"></script>
 </head>
 <body>
   {% block base %}{{ body|safe }}{% endblock %}
