--- a/static/style.css
+++ b/static/style.css
@@ -129,7 +129,7 @@
 
 /* Base formatting */
 body {
-  font: 400 18px 'Sorts Mill Goudy', 'Linden Hill', serif;
+  font: normal 18px 'Sorts Mill Goudy', 'Linden Hill', serif;
   line-height: 125%;
   width: 100%;
   height: 100%;
