--- a/templates/search/search.html
+++ b/templates/search/search.html
@@ -11,6 +11,7 @@
     {{ form.as_p }}
     <p><input type="submit" value="Search"></p>
   </form>
+  <p><em>Read about the <a href="https://pythonhosted.org/Whoosh/querylang.html">query language</a> for fancier searching.</em></p>
 
   {% if query %}
   <section>
