--- a/templates/search/search.html
+++ b/templates/search/search.html
@@ -11,7 +11,9 @@
     {{ form.as_p }}
     <p><input type="submit" value="Search"></p>
   </form>
+  {% comment %}
   <p><em>Read about the <a href="https://pythonhosted.org/Whoosh/querylang.html">query language</a> for fancier searching.</em></p>
+  {% endcomment %}
 
   {% if query %}
   <section>
