--- a/templates/mail/message.html
+++ b/templates/mail/message.html
@@ -8,7 +8,7 @@
       <dt>To</dt><dd>{{to}}</dd>
       <dt>Date</dt><dd>{{datetime}}</dd>
     </dl>
-    <section class="email-body">{{body|urlize}}</section>
+    <section class="email-body">{{body|urlizetrunc:72}}</section>
   </section>
   <section class="attachments">
     <h3>Attachments</h3>
