--- a/templates/search/more_like_this.html
+++ b/templates/search/more_like_this.html
@@ -6,7 +6,7 @@
   <dl>
     {% for related_stuff in related_stuffs %}
     <dt><a href="{{ related_stuff.url }}">{{ related_stuff.title }}</a></dt>
-    <dd>{{ related_stuff.text|truncatechars:200 }}</dd>
+    <dd>{{ related_stuff.text|safe|truncatechars:200 }}</dd>
     {% endfor %}
   </dl>
 </section>
