--- a/templates/404.html
+++ b/templates/404.html
@@ -1,5 +1,8 @@
-{% extends 'search.html' %}
+{% extends 'search/search.html' %}
 {% block introduction %}
-That page has moved; try searching the website or
-<a href="mailto:_@thomaslevine.com">emailing me</a>.
+<h1 class="centered-heading">Page not found</h1>
+<p>
+  That page has moved; try searching the website or
+  <a href="mailto:_@thomaslevine.com">emailing me</a>.
+</p>
 {% endblock %}
