--- a/templates/dadaportal/recommended.html
+++ b/templates/dadaportal/recommended.html
@@ -54,7 +54,7 @@
       <li><a href="/!/downloading-binary-files-is-not-magic/">Binary files</a></li>
       <li><a href="/!/r-for-people-who-already-know-something-about-programming/">R for people who already know something about programming</a></li>
       <li><a href="/!/running-shell-commands/">Running shell commands</a></li>
-      <li><a href="/search/?q=tag:dotfiles">Dotfiles</a></li>
+      <li><a href="/search/?q=dotfiles">Dotfiles</a></li>
     </ul>
 
     <p>Software</p>
