better base template

--- a/templates/meta.html
+++ b/templates/meta.html
@@ -1,9 +1,9 @@
+    <title>Dada Portal | {{title|default:'Thomas Levine'}}</title>
+    <meta content="{{description|default:'Big Dada'}}" name="description">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
     <meta content="Dada Portal" name="generator">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-    <title>Thomas Levine, Dada Artist</title>
-    <meta content="{{description|default:'Big Dada'}}" name="description">
     <meta content="Thomas Levine" name="author">
 
     <meta content="summary" name="twitter:card">
