--- a/templates/search/more_like_this.html
+++ b/templates/search/more_like_this.html
@@ -1,7 +1,7 @@
 {% load more_like_this %}
 {% more_like_this model as related_stuffs limit 3  %}
 {% if related_stuffs|length > 0 %}
-<section>
+<section class="more-like-this">
   <h1>More like this</h1>
   <dl>
     {% for related_stuff in related_stuffs %}
