--- a/templates/articles/article_list.html
+++ b/templates/articles/article_list.html
@@ -1,14 +1,12 @@
 {% extends 'base.html' %}
 {% block base %}
-  {% if articles|length > 0 %}
   <h1>Articles</h1>
   <dl>
-    {% for article in articles %}
+    {% for article in object_list %}
     <dt><a href="{% url 'articles/article' article.endpoint %}">{{article.title}}</a></dt>
     <dd>{{ article.description|default:article.endpoint }}</dd>
+    {% empty %}
+    <center>No articles</center>
     {% endfor %}
   </dl>
-  {% else %}
-  <center>No articles</center>
-  {% endif %}
 {% endblock %}
