--- a/templates/mail/message_list.html
+++ b/templates/mail/message_list.html
@@ -8,16 +8,14 @@
     </p>
   </section>
   <section>
-  {% if messages|length > 0 %}
   <ul>
-    {% for message in messages %}
+    {% for message in object_list %}
     <li>
       <a href="{% url 'mail/message' message.message_id %}">{{message.subject}}</a>
     </li>
+    {% empty %}
+    <center>No mail</center>
     {% endfor %}
   </ul>
-  {% else %}
-  <center>No mail</center>
-  {% endif %}
   </section>
 {% endblock %}
