--- a/templates/404.html
+++ b/templates/404.html
@@ -1,6 +1,6 @@
-{% extends 'search/search.html' %}
-{% block introduction %}
-<h1 class="centered-heading">Page not found</h1>
+{% extends 'base.html' %}
+{% block base %}
+<h1>Page not found</h1>
 <p>
   That page has moved; try searching the website or
   <a href="mailto:_@thomaslevine.com">emailing me</a>.
