--- a/templates/dadaportal/recommended.html
+++ b/templates/dadaportal/recommended.html
@@ -39,6 +39,7 @@
     </ul>
     <p>Other</p>
     <ul>
+      <li><a href="/!/making-your-personal-website/">How to make a personal website</a></li>
       <li><a href="/!/beaglebone-power/">Beaglebone power supplies</a></li>
       <li><a href="/!/jello-wrestling/">Nude jello wrestling</a></li>
     </ul>
